# rust-ps2

./: .gitignore  Binutils.sh  Cargo.toml  README.md  ps2.json
.cargo/: config.toml
Source/: Main.rs
src/: main.rs
